--- a/index.html
+++ b/index.html
@@ -56,90 +56,11 @@
     }
     .realtime tbody {
       display: block;
-      animation: scrollUp 20s linear infinite;
     }
-    @keyframes scrollUp {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(-100%); }
-    }
-    .btn-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    .btn-group button {
-      flex: 1 1 calc(50% - 10px);
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background-color: #f0f0f0;
-      cursor: pointer;
-      text-align: center;
-    }
-    .btn-group button.active {
-      background-color: #0077c2;
-      color: white;
-      border-color: #0077c2;
-    }
-    .form-field { margin-bottom: 20px; }
-    .form-field label {
-      font-weight: bold;
-      display: block;
-      margin-bottom: 6px;
-    }
-    input[type=text], input[type=tel], select {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      display: block;
-      margin: 0 auto;
-    }
-    .info-banner {
-      background-color: #fff8e1;
-      color: #ff6f00;
-      padding: 10px;
-      border: 1px dashed #ffcc80;
-      text-align: center;
-      border-radius: 6px;
-      font-weight: bold;
-      margin: 20px 0 10px;
-    }
-    .privacy-box {
-      background-color: #f8f9fa;
-      font-size: 13px;
-      padding: 12px;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-      margin-bottom: 15px;
-    }
-    .submit-btn {
+    .status-select {
       width: 100%;
-      background-color: #0077c2;
-      color: #fff;
-      padding: 14px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .review-slider {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      gap: 10px;
-      padding: 20px;
-    }
-    .review-slide {
-      flex: 0 0 auto;
-      scroll-snap-align: start;
-    }
-    .review-slide img {
-      width: 300px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      padding: 5px;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -147,130 +68,82 @@
   <div class="container">
     <form method="POST" enctype="application/x-www-form-urlencoded"
       action="https://script.google.com/macros/s/AKfycbzj87psBAHGd3rad4orSpfVvuLJLTmnndf1ud0VgtODaPhM-UJQPFjhkvSQKoyGgaod/exec">
-      <input type="hidden" name="폼구분" value="v2" />
-      <input type="hidden" name="carrier" id="carrier" />
-      <input type="hidden" name="product" id="product" />
-      <input type="hidden" name="addons" id="addons" />
-
-      <div class="banner">
-        <img src="banner.jpg.png" alt="인터넷성지 배너" style="width: 100%; height: auto; border-radius: 10px;" />
-      </div>
-
-      <div class="review-slider">
-        <div class="review-slide"><img src="review1.png.png" alt="후기 1" /></div>
-        <div class="review-slide"><img src="review2.png.png" alt="후기 2" /></div>
-        <div class="review-slide"><img src="review3.png.png" alt="후기 3" /></div>
-        <div class="review-slide"><img src="review4.png.png" alt="후기 4" /></div>
-        <div class="review-slide"><img src="review5.png.png" alt="후기 5" /></div>
-      </div>
-
-      <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상담 현황</h2>
-      <div class="realtime">
-        <div class="realtime-inner">
-          <table>
-            <thead>
-              <tr><th>접수일자</th><th>고객명</th><th>상품</th><th>진행상황</th></tr>
-            </thead>
-            <tbody>
-              <tr><td>2025-06-22</td><td>김**</td><td>인터넷+TV</td><td>✅ 개통완료</td></tr>
-              <tr><td>2025-06-22</td><td>이**</td><td>유심</td><td>🚞 설치예약</td></tr>
-              <tr><td>2025-06-22</td><td>박**</td><td>CCTV</td><td>⏳ 상담중</td></tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <div class="section-title">Q. 통신사를 선택해주세요.</div>
-      <div class="btn-group" id="carrier-group">
-        <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
-        <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
-      </div>
-
-      <div class="section-title">Q. 상품을 선택해주세요.</div>
-      <div class="btn-group" id="product-group">
-        <button type="button">인터넷</button>
-        <button type="button">인터넷+TV</button>
-        <button type="button">인터넷+TV+집전화</button>
-      </div>
-
-      <div class="section-title">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
-      <div class="btn-group multi" id="addons-group">
-        <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
-      </div>
-
-      <div style="border-top: 2px dashed #ccc; margin: 30px 0;"></div>
-
-      <div class="form-field">
-        <label for="name">성함</label>
-        <input type="text" id="name" name="name" placeholder="성함을 입력해주세요" required/>
-      </div>
-
-      <div class="form-field">
-        <label for="phone">연락처</label>
-        <input type="tel" id="phone" name="phone" placeholder="연락처를 입력해주세요" required/>
-      </div>
-
-      <div class="info-banner">⏰ 24시간 연중무휴! 지금 접수하시면 바로 상담 연결됩니다.</div>
-
-      <div class="form-field">
-        <select name="time">
-          <option value="">상담시간 선택 (10시~22시)</option>
-          <option>10시</option><option>11시</option><option>12시</option>
-          <option>13시</option><option>14시</option><option>15시</option>
-          <option>16시</option><option>17시</option><option>18시</option>
-          <option>19시</option><option>20시</option><option>21시</option><option>22시</option>
-        </select>
-      </div>
-
-      <div class="privacy-box">
-        <strong>개인정보 수집 및 이용 동의</strong><br/><br/>
-        - 수집 항목: 성함, 연락처, 상담 희망시간, 통신사, 상품정보<br/>
-        - 수집 목적: 서비스 상담 및 가입 안내 제공<br/>
-        - 보유 및 이용기간: 수집일로부터 1년간 보관 후 파기<br/>
-        - 귀하는 개인정보 제공에 동의하지 않을 권리가 있으며, 미동의 시 서비스 이용에 제한이 있을 수 있습니다.
-      </div>
-      <label><input type="checkbox" required> 위 내용을 모두 확인하였으며, 개인정보 수집 및 이용에 동의합니다.</label>
-
-      <br><br>
-      <button class="submit-btn" type="submit">상담 신청하기</button>
+      <!-- 기존 폼은 생략 -->
     </form>
+
+    <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상담 현황</h2>
+    <div class="realtime">
+      <div class="realtime-inner">
+        <table>
+          <thead>
+            <tr><th>접수일자</th><th>고객명</th><th>상품</th><th>진행상황</th></tr>
+          </thead>
+          <tbody id="realtime-body"></tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      document.querySelectorAll(".btn-group button").forEach(btn => {
-        btn.addEventListener("click", function () {
-          const group = this.parentElement;
-          if (group.classList.contains("multi")) {
-            this.classList.toggle("active");
-          } else {
-            group.querySelectorAll("button").forEach(b => b.classList.remove("active"));
-            this.classList.add("active");
-          }
+    async function loadRealtimeStatus() {
+      try {
+        const res = await fetch("https://script.google.com/macros/s/AKfycbzj87psBAHGd3rad4orSpfVvuLJLTmnndf1ud0VgtODaPhM-UJQPFjhkvSQKoyGgaod/exec");
+        const data = await res.json();
+        const body = document.getElementById("realtime-body");
+        body.innerHTML = "";
+
+        const STATUS_COLOR = {
+          "상담예약": "#ef5350",   // 빨강
+          "상담중": "#ffa726",     // 주황
+          "설치예약": "#fff176",   // 노랑
+          "입금완료": "#66bb6a"    // 초록
+        };
+
+        data.slice(-20).reverse().forEach(item => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${item.time}</td>
+            <td>${item.name.replace(/(?<=.{1})./g, "*")}</td>
+            <td>${item.product}</td>
+            <td>
+              <select class="status-select" data-time="${item.time}" style="background-color:${STATUS_COLOR[item.status] || '#e0e0e0'}">
+                ${Object.keys(STATUS_COLOR).map(status => `
+                  <option value="${status}" ${status === item.status ? 'selected' : ''}>${status}</option>
+                `).join('')}
+              </select>
+            </td>
+          `;
+          body.appendChild(tr);
         });
-      });
 
-      const form = document.querySelector("form");
-      form.addEventListener("submit", function (e) {
-        const name = document.getElementById("name").value.trim();
-        const phone = document.getElementById("phone").value.trim();
-        const carrierBtn = document.querySelector('#carrier-group button.active');
-        const productBtn = document.querySelector('#product-group button.active');
-        const agreeChecked = form.querySelector('input[type="checkbox"]:checked');
+        document.querySelectorAll(".status-select").forEach(select => {
+          select.addEventListener("change", async function () {
+            const newStatus = this.value;
+            const time = this.dataset.time;
+            const formData = new FormData();
+            formData.append("mode", "statusChange");
+            formData.append("time", time);
+            formData.append("status", newStatus);
 
-        if (!name || !phone || !carrierBtn || !productBtn || !agreeChecked) {
-          alert("성함, 연락처, 통신사, 상품 선택, 개인정보 동의를 모두 입력해주세요.");
-          e.preventDefault(); // 전송 중단
-          return;
-        }
+            const response = await fetch("https://script.google.com/macros/s/AKfycbzj87psBAHGd3rad4orSpfVvuLJLTmnndf1ud0VgtODaPhM-UJQPFjhkvSQKoyGgaod/exec", {
+              method: "POST",
+              body: formData
+            });
 
-        // 값 동기화
-        document.getElementById("carrier").value = carrierBtn.textContent;
-        document.getElementById("product").value = productBtn.textContent;
-        const addonBtns = document.querySelectorAll('#addons-group button.active');
-        document.getElementById("addons").value = Array.from(addonBtns).map(btn => btn.textContent).join(',');
-      });
-    });
+            if (response.ok) {
+              this.style.backgroundColor = STATUS_COLOR[newStatus] || '#e0e0e0';
+            } else {
+              alert("상태 변경 실패");
+            }
+          });
+        });
+      } catch (err) {
+        console.error("현황 불러오기 실패:", err);
+      }
+    }
+
+    loadRealtimeStatus();
+    setInterval(loadRealtimeStatus, 10000);
   </script>
 </body>
 </html>
